[package]
name = "graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-dynamodb = "0.19.0"
aws-sdk-dynamodbstreams = "0.19.0"
tokio = { version = "1", features = ["full"] }

juniper = "0.15"
juniper_hyper = "0.8.0"
hyper = { version = "0.14", features = ["server", "runtime"] }
pretty_env_logger = "0.4"