[package]
name = "graph"
version = "0.1.0"
edition = "2021"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="execute_all"
path="src/bin/execute_all.rs"

[dependencies]
aws-config = "0.49.0"
aws-sdk-dynamodb = "0.19.0"
aws-sdk-dynamodbstreams = "0.19.0"
tokio = { version = "1", features = ["full"] }
juniper = "0.15"
juniper_hyper = "0.8.0"
hyper = { version = "0.14", features = ["server", "runtime"] }
log = "0.4"
pretty_env_logger = "0.4"
sled="0.34"
serde = "1.0.145"
serde_json = "1.0.85"
tantivy = "0.18.0"